[package]
name = "canistreamit"
version = "0.1.1"
authors = ["Roberto <rob.ariosa@hotmail.com>"]
edition = "2018"

description = "Check if you can stream something in a service, check prices, scores and popularity."
repository = "https://github.com/MrRobb/canistreamit-rs"
documentation = "https://docs.rs/canistreamit"
readme = "README.md"
keywords = ["canistreamit", "justwatch", "netflix", "tomatoes", "imdb"]
categories = ["api-bindings"]
license = "MIT/Apache-2.0"

[badges]
maintenance = { status = "experimental" }

[dependencies]
reqwest = "0.9.19"
serde = "1.0.98"
serde_json = "1.0.40"
